--- a/CST 356 Week 4 Lab/Views/Users/Index.cshtml
+++ b/CST 356 Week 4 Lab/Views/Users/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CST_356_Week_4_Lab.Data.Entities.User>
+﻿@model IEnumerable<CST_356_Week_4_Lab.Models.UserViewModel>
 
 @{
     ViewBag.Title = "Index";
