--- a/CST 356 Week 4 Lab/Views/Users/Index.cshtml
+++ b/CST 356 Week 4 Lab/Views/Users/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<CST_356_Week_4_Lab.Models.UserViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Students";
 }
 
-<h2>Index</h2>
+<h2>Students</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -26,6 +26,9 @@
         <th>
             @Html.DisplayNameFor(model => model.YearsInSchool)
         </th>
+        <th>
+            @Html.DisplayName("Classes")
+        </th>
         <th></th>
     </tr>
 
@@ -45,6 +48,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.YearsInSchool)
+        </td>
+        <td>
+            @Html.ActionLink("Classes", "Index", "Class", new { userID = item.ID }, null)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
